tests/compile_fail/thread_local/runtime_thread_local 0.stderr
warning: missing documentation for an associated type
  --> $DIR/runtime.rs:52:5
   |
52 |     type Id: Copy + Eq;
   |     ^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/lib.rs:2:9
   |
2  | #![warn(missing_docs)]
   |         ^^^^^^^^^^^^

warning: 1 warning emitted

error: no rules expected the token `=`
 --> $DIR/runtime_thread_local 0.rs:2:14
  |
2 |     type Foo = u8;
  |              ^ no rules expected this token in macro call

error[E0433]: failed to resolve: use of undeclared type `Foo`
 --> $DIR/runtime_thread_local 0.rs:7:22
  |
7 |     assert_send_sync(Foo::new());
  |                      ^^^ use of undeclared type `Foo`
